# memory-agent

./: .env.example  .gitignore  Makefile  README.md  langgraph.json  pyproject.toml
.github/workflows/: integration-tests.yml  unit-tests.yml
src/memory_agent/: __init__.py  configuration.py  context.py  graph.py  prompts.py  state.py  tools.py  utils.py
tests/integration_tests/: test_graph.py
tests/unit_tests/: test_configuration.py  test_context.py
